test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/fallback_attr.sw
library;

#[fallback]
pub fn ok() { } // Actually semantically also not ok, but the compilation will not reach that phase.

#[fallback(invalid)] // Should be no invalid arg error or warning here.
pub fn also_ok() { }